# python_django

./: .env  manage.py  pyproject.toml
config/: settings.py  urls.py
students/: models.py  urls.py  views.py
students/migrations/: 0001_initial.py
students/templates/students/: about.html  contact.html
